# data-pipeline-project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: settings.py
notebooks/: exploratory_analysis.ipynb
pipeline/: run_all.py
pipeline/ingestion/: ingest.py
pipeline/quality/: quality_checks.py
pipeline/schemas/: models.py
pipeline/streaming/: kafka_simulation.py
pipeline/transformation/: transform.py
pipeline/utils/: decorators.py  logging_config.py
pipeline/warehouse/: dw_model.py
sql/: create_tables.sql  hql_queries.hql  queries_analytics.sql
tests/: conftest.py  test_quality.py  test_warehouse.py
