[project]
name = "data-pipeline-project"
version = "1.0.0"
description = "End-to-end data engineering pipeline – Medallion architecture, dimensional modelling, LGPD-compliant anonymisation."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0,<3.0.0",
    "pyspark>=3.5.0,<4.0.0",
    "pyarrow>=14.0.0,<16.0.0",
    "faker>=22.0.0,<25.0.0",
    "kafka-python>=2.0.2,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-json-logger>=2.0.7,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "hypothesis>=6.92.0,<7.0.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
pythonpath   = ["."]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
